--- a/style/sassstyleindex.css
+++ b/style/sassstyleindex.css
@@ -7,6 +7,135 @@
 body {
   max-width: 1400px;
   margin: auto;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  color: black;
 }
 
-/* Header *//*# sourceMappingURL=sassstyleindex.css.map */
+a {
+  text-decoration: none;
+  color: black;
+}
+a:hover {
+  text-decoration: none;
+  color: black;
+}
+
+img {
+  height: 100px;
+  width: 100px;
+}
+
+/* Header */
+.headlogo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 63px;
+}
+.headlogo__img {
+  height: 44px;
+  width: 162px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: #EAEAEA;
+  color: #353535;
+  height: 50px;
+}
+.navbar__city {
+  margin-left: 17px;
+  font-size: 16px;
+}
+
+.description {
+  background-color: #f7f7f7;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.description__title {
+  margin-top: 40px;
+  font-size: 24px;
+  width: 73%;
+}
+.description__discover {
+  font-weight: 300;
+  font-size: 18px;
+  width: 85%;
+  margin-top: 10px;
+  margin-bottom: 27px;
+  color: #353535;
+}
+.description__button {
+  color: white;
+  background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+  border: none;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 25px;
+  width: 218px;
+  height: 50px;
+  margin-bottom: 57px;
+  font-size: 16px;
+}
+
+.fonctionnement {
+  display: flex;
+  flex-direction: column;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-bottom: 48px;
+}
+.fonctionnement__title {
+  font-weight: 700;
+  font-size: 24px;
+  margin-top: 48px;
+  margin-bottom: 26px;
+}
+.fonctionnement__bis {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+.fonctionnement__bis__card {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 97%;
+  height: 72px;
+  background-color: #F7F7F7;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+  border-radius: 20px;
+  margin-bottom: 25px;
+  font-size: 16px;
+}
+.fonctionnement__bis__card__number {
+  color: white;
+  background-color: #9356DC;
+  width: 24px;
+  height: 24px;
+  border-radius: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  left: 18px;
+}
+.fonctionnement__bis__card__icone {
+  color: #7E7E7E;
+  margin-left: 30px;
+  margin-right: 20px;
+}
+.fonctionnement__bis__card__icone:hover {
+  color: #9356DC;
+}/*# sourceMappingURL=sassstyleindex.css.map */
