--- a/style/sassstyleindex.css
+++ b/style/sassstyleindex.css
@@ -19,26 +19,30 @@ a {
 }
 a:hover {
   text-decoration: none;
-  color: black;
 }
-
-img {
-  height: 100px;
-  width: 100px;
+a:visited {
+  text-decoration: none;
+}
+a:link {
+  text-decoration: none;
+}
+a:active {
+  text-decoration: none;
 }
 
 /* Header */
 .headlogo {
   display: flex;
   justify-content: center;
-  align-items: center;
   height: 63px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+  text-align: center;
+  font-family: "Shrikhand";
+  font-weight: 400;
+  font-size: 30px;
 }
-.headlogo__img {
-  height: 44px;
-  width: 162px;
-  -o-object-fit: contain;
-     object-fit: contain;
+.headlogo__text {
+  margin-top: 14px;
 }
 
 .navbar {
@@ -86,6 +90,10 @@ img {
   height: 50px;
   margin-bottom: 57px;
   font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .fonctionnement {
@@ -128,14 +136,124 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  left: 18px;
+  position: relative;
+  right: 12px;
 }
 .fonctionnement__bis__card__icone {
   color: #7E7E7E;
-  margin-left: 30px;
+  margin-left: 10px;
   margin-right: 20px;
 }
 .fonctionnement__bis__card__icone:hover {
   color: #9356DC;
+}
+
+.main {
+  background-color: #f7f7f7;
+}
+.main__title {
+  font-weight: 700;
+  font-size: 24px;
+  padding-top: 54px;
+  margin-left: 20px;
+  margin-bottom: 25px;
+}
+.main__section {
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 50px;
+}
+.main__section__card {
+  width: 100%;
+  height: 251px;
+  margin-bottom: 15px;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+}
+.main__section__card__container {
+  height: 70%;
+}
+.main__section__card__container__img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
+  width: 100%;
+  border-radius: 15px 15px 0px 0px;
+}
+.main__section__card__description {
+  margin-top: 16px;
+  margin-left: 13px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.main__section__card__description__name {
+  font-weight: 700;
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+.main__section__card__description__place {
+  font-weight: 300;
+  font-size: 17px;
+}
+.main__section__card__description__bis {
+  display: flex;
+  flex-direction: row;
+  margin-right: 25px;
+}
+.main__section__card__description__bis__new {
+  position: relative;
+  bottom: 175px;
+  left: 20px;
+  height: 29px;
+  width: 80px;
+  background-color: #99E2D0;
+  color: #008766;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 2px;
+}
+.main__section__card__description__bis__heart:hover {
+  background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+}
+
+.footer {
+  background-color: #353535;
+  padding-left: 25px;
+  padding-top: 22px;
+  padding-bottom: 15px;
+}
+.footer__logo {
+  font-size: 18px;
+  color: white;
+  font-family: "Shrikhand";
+  margin-bottom: 18px;
+}
+.footer__ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+.footer__ul__li {
+  margin-bottom: 7px;
+}
+.footer__ul__li__link {
+  display: flex;
+  flex-direction: row;
+  color: white;
+  font-size: 16px;
+}
+.footer__ul__li__link--weight {
+  font-weight: 400;
+}
+.footer__ul__li__link__icone {
+  margin-right: 10px;
+}
+.footer__ul__li__link__icone--more {
+  margin-right: 15px;
 }/*# sourceMappingURL=sassstyleindex.css.map */
