--- a/style/sassstyleindex.scss
+++ b/style/sassstyleindex.scss
@@ -24,13 +24,16 @@ a {
     color: black;
     &:hover {
         text-decoration: none;
-        color: black;
     }
-}
-
-img {
-    height: 100px;
-    width: 100px;
+    &:visited {
+        text-decoration: none;
+    }
+    &:link{
+        text-decoration: none;
+    }
+    &:active{
+        text-decoration: none;
+    }
 }
 
 /* Header */
@@ -38,12 +41,14 @@ img {
 .headlogo {
     display: flex;
     justify-content: center;
-    align-items: center;
     height: 63px;
-    &__img {
-        height: 44px;
-        width: 162px;
-        object-fit: contain;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+    text-align: center;
+    font-family: 'Shrikhand';
+    font-weight: 400;
+    font-size: 30px;
+    &__text {
+        margin-top: 14px;
     }
 }
 
@@ -83,7 +88,7 @@ img {
     }
     &__button {
         color: white;
-        background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+        background: linear-gradient(193.33deg, $color-primary -11.44%, $color-secondary 123.93%);
         border: none;
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
         border-radius: 25px;
@@ -91,6 +96,10 @@ img {
         height: 50px;
         margin-bottom: 57px;
         font-size: 16px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
     }
 }
 
@@ -124,22 +133,133 @@ img {
             font-size: 16px;
             &__number {
                 color: white;
-                background-color: #9356DC;
+                background-color: $color-primary;
                 width: 24px;
                 height: 24px;
                 border-radius: 25px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                position: absolute;
-                left: 18px;
+                position: relative;
+                right: 12px;
             }
             &__icone {
                 color: #7E7E7E;
-                margin-left: 30px;
+                margin-left: 10px;
                 margin-right: 20px;
                 &:hover {
-                    color: #9356DC;
+                    color: $color-primary;
+                }
+            }
+        }
+    }
+}
+
+.main {
+    background-color: darken($color: white, $amount: 3%);
+    &__title {
+        font-weight: 700;
+        font-size: 24px;
+        padding-top: 54px;
+        margin-left: 20px;
+        margin-bottom: 25px;
+    }
+    &__section{
+        padding-left: 15px;
+        padding-right: 15px;
+        padding-bottom: 50px;
+        &__card {
+            width: 100%;
+            height: 251px;
+            margin-bottom: 15px;
+            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+            border-radius: 15px;
+            &__container {
+                height: 70%;
+                &__img {
+                    object-fit: cover;
+                    height: 100%;
+                    width: 100%;
+                    border-radius: 15px 15px 0px 0px;
+                }
+            }
+            &__description {
+                margin-top: 16px;
+                margin-left: 13px;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                &__name {
+                    font-weight: 700;
+                    font-size: 18px;
+                    margin-bottom: 5px;
+                }
+                &__place {
+                    font-weight: 300;
+                    font-size: 17px;
+                }
+                &__bis {
+                    display: flex;
+                    flex-direction: row;
+                    margin-right: 25px;
+                    &__new {
+                        position: relative;
+                        bottom: 175px;
+                        left: 20px;
+                        height: 29px;
+                        width: 80px;
+                        background-color: $color-tertiary;
+                        color: #008766;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        text-align: center;
+                        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+                        border-radius: 2px;
+                    }
+                    &__heart {
+                        &:hover {
+                            background: linear-gradient(193.33deg, $color-primary -11.44%, $color-secondary 123.93%);
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.footer {
+    background-color: #353535;
+    padding-left: 25px;
+    padding-top: 22px;
+    padding-bottom: 15px;
+    &__logo {
+        font-size: 18px;
+        color: white;
+        font-family: 'Shrikhand';
+        margin-bottom: 18px;
+    }
+    &__ul{
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        &__li {
+            margin-bottom: 7px;
+            &__link {
+                display: flex;
+                flex-direction: row;
+                color: white;
+                font-size: 16px;
+                &--weight {
+                    font-weight: 400;
+                }
+                &__icone {
+                    margin-right: 10px;
+                    &--more {
+                        margin-right: 15px;
+                    }
                 }
             }
         }
