--- a/style/sassstylemenu.css
+++ b/style/sassstylemenu.css
@@ -1,3 +1,5 @@
+/* Variables */
+/* Reset CSS */
 * {
   margin: 0;
 }
@@ -5,4 +7,40 @@
 body {
   max-width: 1400px;
   margin: auto;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  color: black;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+a:hover {
+  text-decoration: none;
+}
+a:visited {
+  text-decoration: none;
+}
+a:link {
+  text-decoration: none;
+}
+a:active {
+  text-decoration: none;
+}
+
+/* Header */
+.headlogo {
+  display: flex;
+  justify-content: center;
+  height: 63px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+  text-align: center;
+  font-family: "Shrikhand";
+  font-weight: 400;
+  font-size: 30px;
+}
+.headlogo__text {
+  margin-top: 14px;
 }/*# sourceMappingURL=sassstylemenu.css.map */
