--- a/style/sassstylemenu.scss
+++ b/style/sassstylemenu.scss
@@ -1,3 +1,11 @@
+/* Variables */
+
+$color-primary : #9356DC;
+$color-secondary : #FF79DA;
+$color-tertiary : #99E2D0;
+
+/* Reset CSS */
+
 * {
     margin: 0;
 }
@@ -5,4 +13,41 @@
 body {
     max-width: 1400px;
     margin: auto;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    color: black;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    &:hover {
+        text-decoration: none;
+    }
+    &:visited {
+        text-decoration: none;
+    }
+    &:link{
+        text-decoration: none;
+    }
+    &:active{
+        text-decoration: none;
+    }
+}
+
+/* Header */
+
+.headlogo {
+    display: flex;
+    justify-content: center;
+    height: 63px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+    text-align: center;
+    font-family: 'Shrikhand';
+    font-weight: 400;
+    font-size: 30px;
+    &__text {
+        margin-top: 14px;
+    }
 }
