--- a/style/sassstyleindex.scss
+++ b/style/sassstyleindex.scss
@@ -155,6 +155,8 @@ a {
     }
 }
 
+/* Main */
+
 .main {
     background-color: darken($color: white, $amount: 3%);
     &__title {
@@ -205,7 +207,7 @@ a {
                     &__new {
                         position: relative;
                         bottom: 175px;
-                        left: 20px;
+                        left: 23px;
                         height: 29px;
                         width: 80px;
                         background-color: $color-tertiary;
@@ -227,6 +229,8 @@ a {
         }
     }
 }
+
+/* Footer */
 
 .footer {
     background-color: #353535;
