--- a/style/sassstylemenu.css
+++ b/style/sassstylemenu.css
@@ -34,6 +34,7 @@ a:active {
 .headlogo {
   display: flex;
   justify-content: center;
+  background-color: white;
   height: 63px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
   text-align: center;
@@ -43,4 +44,136 @@ a:active {
 }
 .headlogo__text {
   margin-top: 14px;
+}
+
+.header_img {
+  width: 100%;
+  height: 275px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+/* Main */
+.main {
+  background-color: #F7F7F7;
+  border-radius: 45px 45px 0px 0px;
+  padding: 32px 13px 0px 13px;
+  margin-bottom: -50px;
+  position: relative;
+  bottom: 50px;
+}
+.main__name {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 28px;
+  margin-bottom: 30px;
+  margin-left: 4px;
+}
+.main__name__text {
+  font-family: "Shrikhand";
+  font-weight: 400;
+  font-size: 28px;
+}
+.main__name__icone:hover {
+  background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+}
+.main__section {
+  padding-bottom: 28px;
+}
+.main__section__title {
+  font-weight: 300;
+  font-size: 16px;
+  height: 23px;
+  border-bottom: 3px solid #99E2D0;
+  margin-bottom: 12px;
+}
+.main__section__card {
+  background-color: white;
+  height: 69px;
+  box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
+  border-radius: 15.0431px;
+  margin-bottom: 12px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.main__section__card__title {
+  font-size: 18px;
+  padding-top: 12px;
+  padding-left: 15px;
+}
+.main__section__card__description {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-left: 15px;
+  padding-bottom: 12px;
+  padding-right: 12px;
+  font-weight: 300;
+  font-size: 15.0431px;
+}
+.main__section__card__description__price {
+  color: #353535;
+  font-weight: 700;
+  font-size: 15.0431px;
+}
+.main__container {
+  display: flex;
+  justify-content: center;
+}
+.main__container__button {
+  color: white;
+  background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+  border: none;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 25px;
+  width: 186px;
+  height: 50px;
+  margin-bottom: 57px;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+/* Footer */
+.footer {
+  background-color: #353535;
+  padding-left: 25px;
+  padding-top: 22px;
+  padding-bottom: 15px;
+}
+.footer__logo {
+  font-size: 18px;
+  color: white;
+  font-family: "Shrikhand";
+  margin-bottom: 18px;
+}
+.footer__ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+.footer__ul__li {
+  margin-bottom: 7px;
+}
+.footer__ul__li__link {
+  display: flex;
+  flex-direction: row;
+  color: white;
+  font-size: 16px;
+}
+.footer__ul__li__link--weight {
+  font-weight: 400;
+}
+.footer__ul__li__link__icone {
+  margin-right: 10px;
+}
+.footer__ul__li__link__icone--more {
+  margin-right: 15px;
 }/*# sourceMappingURL=sassstylemenu.css.map */
