--- a/style/sassstylemenu.scss
+++ b/style/sassstylemenu.scss
@@ -41,6 +41,7 @@ a {
 .headlogo {
     display: flex;
     justify-content: center;
+    background-color: white;
     height: 63px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
     text-align: center;
@@ -49,5 +50,140 @@ a {
     font-size: 30px;
     &__text {
         margin-top: 14px;
+    }
+}
+
+.header_img {
+    width: 100%;
+    height: 275px;
+    object-fit: cover;
+}
+
+/* Main */
+
+.main {
+    background-color: #F7F7F7;
+    border-radius: 45px 45px 0px 0px;
+    padding: 32px 13px 0px 13px;
+    margin-bottom: -50px;
+    position: relative;
+    bottom: 50px;
+    &__name {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        margin-right: 28px;
+        margin-bottom: 30px;
+        margin-left: 4px;
+        &__text {
+            font-family: 'Shrikhand';
+            font-weight: 400;
+            font-size: 28px;
+        }
+        &__icone {
+            &:hover {
+                background: linear-gradient(193.33deg, $color-primary -11.44%, $color-secondary 123.93%);
+            }
+        }
+    }
+    &__section {
+        padding-bottom: 28px;
+        &__title {
+            font-weight: 300;
+            font-size: 16px;
+            height: 23px;
+            border-bottom: 3px solid $color-tertiary ;
+            margin-bottom: 12px;
+        }
+        &__card {
+            background-color: white;
+            height: 69px;
+            box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
+            border-radius: 15.0431px;
+            margin-bottom: 12px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            &__title {
+                font-size: 18px;
+                padding-top: 12px;
+                padding-left: 15px;
+            }
+            &__description {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                padding-left: 15px;
+                padding-bottom: 12px;
+                padding-right: 12px;
+                font-weight: 300;
+                font-size: 15.0431px;
+                &__price {
+                    color: #353535;
+                    font-weight: 700;
+                    font-size: 15.0431px;
+                }
+            }
+        }
+    }
+    &__container {
+        display: flex;
+        justify-content: center;
+        &__button {
+            color: white;
+            background: linear-gradient(193.33deg, $color-primary -11.44%, $color-secondary 123.93%);
+            border: none;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+            border-radius: 25px;
+            width: 186px;
+            height: 50px;
+            margin-bottom: 57px;
+            font-size: 16px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+    }
+}
+
+/* Footer */
+
+.footer {
+    background-color: #353535;
+    padding-left: 25px;
+    padding-top: 22px;
+    padding-bottom: 15px;
+    &__logo {
+        font-size: 18px;
+        color: white;
+        font-family: 'Shrikhand';
+        margin-bottom: 18px;
+    }
+    &__ul{
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        &__li {
+            margin-bottom: 7px;
+            &__link {
+                display: flex;
+                flex-direction: row;
+                color: white;
+                font-size: 16px;
+                &--weight {
+                    font-weight: 400;
+                }
+                &__icone {
+                    margin-right: 10px;
+                    &--more {
+                        margin-right: 15px;
+                    }
+                }
+            }
+        }
     }
 }
