--- a/style/sassstyleindex.css
+++ b/style/sassstyleindex.css
@@ -95,6 +95,10 @@ a:active {
   align-items: center;
   text-align: center;
 }
+.description__button:hover {
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+}
 
 .fonctionnement {
   display: flex;
