--- a/style/sassstylemenu.css
+++ b/style/sassstylemenu.css
@@ -31,7 +31,14 @@ a:active {
 }
 
 /* Header */
-.headlogo {
+.nav__arrow {
+  font-size: 23px;
+  color: #353535;
+  position: absolute;
+  left: 23px;
+  top: 20px;
+}
+.nav__headlogo {
   display: flex;
   justify-content: center;
   background-color: white;
@@ -42,7 +49,7 @@ a:active {
   font-weight: 400;
   font-size: 30px;
 }
-.headlogo__text {
+.nav__headlogo__text {
   margin-top: 14px;
 }
 
@@ -86,8 +93,14 @@ a:active {
   font-weight: 300;
   font-size: 16px;
   height: 23px;
-  border-bottom: 3px solid #99E2D0;
+}
+.main__section__border {
+  height: 3px;
+  width: 40px;
+  background-color: #99E2D0;
+  margin: 0px;
   margin-bottom: 12px;
+  padding: 0px;
 }
 .main__section__card {
   background-color: white;
@@ -137,6 +150,10 @@ a:active {
   justify-content: center;
   align-items: center;
   text-align: center;
+}
+.main__container__button:hover {
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
 }
 
 /* Footer */
