--- a/style/sassstylemenu.scss
+++ b/style/sassstylemenu.scss
@@ -38,18 +38,27 @@ a {
 
 /* Header */
 
-.headlogo {
-    display: flex;
-    justify-content: center;
-    background-color: white;
-    height: 63px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
-    text-align: center;
-    font-family: 'Shrikhand';
-    font-weight: 400;
-    font-size: 30px;
-    &__text {
-        margin-top: 14px;
+.nav {
+    &__arrow {
+        font-size: 23px;
+        color: #353535;
+        position: absolute;
+        left: 23px;
+        top: 20px;
+    }
+    &__headlogo {
+        display: flex;
+        justify-content: center;
+        background-color: white;
+        height: 63px;
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+        text-align: center;
+        font-family: 'Shrikhand';
+        font-weight: 400;
+        font-size: 30px;
+        &__text {
+            margin-top: 14px;
+        }
     }
 }
 
@@ -93,8 +102,14 @@ a {
             font-weight: 300;
             font-size: 16px;
             height: 23px;
-            border-bottom: 3px solid $color-tertiary ;
+        }
+        &__border {
+            height: 3px;
+            width: 40px;
+            background-color: $color-tertiary;
+            margin: 0px;
             margin-bottom: 12px;
+            padding: 0px;
         }
         &__card {
             background-color: white;
@@ -144,6 +159,10 @@ a {
             justify-content: center;
             align-items: center;
             text-align: center;
+            &:hover {
+                background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, $color-primary -5.2%, $color-secondary 110.74%);
+                box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+            }
         }
     }
 }
