--- a/style/sassstyleindex.css
+++ b/style/sassstyleindex.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  max-width: 1400px;
+  max-width: 1440px;
   margin: auto;
   font-family: "Roboto";
   font-style: normal;
@@ -41,8 +41,19 @@ a:active {
   font-weight: 400;
   font-size: 30px;
 }
+@media (min-width: 1050px) {
+  .headlogo {
+    height: 96px;
+    font-size: 35px;
+  }
+}
 .headlogo__text {
   margin-top: 14px;
+}
+@media (min-width: 1050px) {
+  .headlogo__text {
+    margin-top: 30px;
+  }
 }
 
 .navbar {
@@ -72,6 +83,12 @@ a:active {
   font-size: 24px;
   width: 73%;
 }
+@media (min-width: 1050px) {
+  .description__title {
+    font-size: 40px;
+    margin-top: 30px;
+  }
+}
 .description__discover {
   font-weight: 300;
   font-size: 18px;
@@ -95,6 +112,11 @@ a:active {
   align-items: center;
   text-align: center;
 }
+@media (min-width: 1050px) {
+  .description__button {
+    margin-bottom: 30px;
+  }
+}
 .description__button:hover {
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
@@ -105,7 +127,14 @@ a:active {
   flex-direction: column;
   padding-left: 20px;
   padding-right: 20px;
-  margin-bottom: 48px;
+  margin-bottom: 43px;
+}
+@media (min-width: 1050px) {
+  .fonctionnement {
+    max-width: 1050px;
+    margin: auto;
+    margin-bottom: 25px;
+  }
 }
 .fonctionnement__title {
   font-weight: 700;
@@ -119,6 +148,12 @@ a:active {
   justify-content: center;
   align-items: flex-end;
 }
+@media (min-width: 768px) {
+  .fonctionnement__bis {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
 .fonctionnement__bis__card {
   display: flex;
   flex-direction: row;
@@ -130,6 +165,11 @@ a:active {
   border-radius: 20px;
   margin-bottom: 25px;
   font-size: 16px;
+}
+@media (min-width: 768px) {
+  .fonctionnement__bis__card {
+    width: 31%;
+  }
 }
 .fonctionnement__bis__card__number {
   color: white;
@@ -163,10 +203,33 @@ a:active {
   margin-left: 20px;
   margin-bottom: 25px;
 }
+@media (min-width: 1050px) {
+  .main__title {
+    max-width: 1050px;
+    margin: auto;
+    margin-bottom: 25px;
+    padding-top: 30px;
+  }
+}
 .main__section {
   padding-left: 15px;
   padding-right: 15px;
   padding-bottom: 50px;
+}
+@media (min-width: 768px) {
+  .main__section {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+@media (min-width: 1050px) {
+  .main__section {
+    max-width: 1050px;
+    margin: auto;
+    padding-bottom: 0px;
+  }
 }
 .main__section__card {
   width: 100%;
@@ -174,6 +237,17 @@ a:active {
   margin-bottom: 15px;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
   border-radius: 15px;
+}
+@media (min-width: 768px) {
+  .main__section__card {
+    width: 48%;
+  }
+}
+@media (min-width: 1050px) {
+  .main__section__card {
+    width: 45%;
+    margin-bottom: 50px;
+  }
 }
 .main__section__card__container {
   height: 70%;
@@ -232,11 +306,27 @@ a:active {
   padding-top: 22px;
   padding-bottom: 15px;
 }
+@media (min-width: 1050px) {
+  .footer {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: end;
+    padding: 0px;
+    padding-bottom: 30px;
+    padding-right: 60px;
+    height: 114px;
+  }
+}
 .footer__logo {
   font-size: 18px;
   color: white;
   font-family: "Shrikhand";
   margin-bottom: 18px;
+}
+@media (min-width: 1050px) {
+  .footer__logo {
+    margin: 0px;
+  }
 }
 .footer__ul {
   list-style: none;
@@ -245,8 +335,19 @@ a:active {
   display: flex;
   flex-direction: column;
 }
+@media (min-width: 1050px) {
+  .footer__ul {
+    flex-direction: row;
+  }
+}
 .footer__ul__li {
   margin-bottom: 7px;
+}
+@media (min-width: 1050px) {
+  .footer__ul__li {
+    margin: 0px;
+    margin-right: 30px;
+  }
 }
 .footer__ul__li__link {
   display: flex;
