--- a/style/sassstyleindex.scss
+++ b/style/sassstyleindex.scss
@@ -3,6 +3,9 @@
 $color-primary : #9356DC;
 $color-secondary : #FF79DA;
 $color-tertiary : #99E2D0;
+$breakpoint-tablet: 768px;
+$breakpoint-desktop: 1050px;
+
 
 /* Reset CSS */
 
@@ -11,7 +14,7 @@ $color-tertiary : #99E2D0;
 }
 
 body {
-    max-width: 1400px;
+    max-width: 1440px;
     margin: auto;
     font-family: 'Roboto';
     font-style: normal;
@@ -47,8 +50,15 @@ a {
     font-family: 'Shrikhand';
     font-weight: 400;
     font-size: 30px;
+    @media (min-width: $breakpoint-desktop) {
+        height: 96px;
+        font-size: 35px;
+    }
     &__text {
         margin-top: 14px;
+        @media (min-width: $breakpoint-desktop) {
+            margin-top: 30px;
+        }
     }
 }
 
@@ -77,6 +87,10 @@ a {
         margin-top: 40px;
         font-size: 24px;
         width: 73%;
+        @media (min-width: $breakpoint-desktop) {
+            font-size: 40px;
+            margin-top: 30px;
+        }
     }
     &__discover {
         font-weight: 300;
@@ -100,6 +114,9 @@ a {
         justify-content: center;
         align-items: center;
         text-align: center;
+        @media (min-width: $breakpoint-desktop) {
+            margin-bottom: 30px;
+        }
         &:hover {
             background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, $color-primary -5.2%, $color-secondary 110.74%);
             box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
@@ -112,7 +129,12 @@ a {
     flex-direction: column;
     padding-left: 20px;
     padding-right: 20px;
-    margin-bottom: 48px;
+    margin-bottom: 43px;
+    @media (min-width: $breakpoint-desktop) {
+        max-width: $breakpoint-desktop;
+        margin: auto;
+        margin-bottom: 25px;
+    }
     &__title {
         font-weight: 700;
         font-size: 24px;
@@ -124,6 +146,10 @@ a {
         flex-direction: column;
         justify-content: center;
         align-items: flex-end;
+        @media (min-width: $breakpoint-tablet) {
+            flex-direction: row;
+            justify-content: space-between;
+        }
         &__card {
             display: flex;
             flex-direction: row;
@@ -135,6 +161,9 @@ a {
             border-radius: 20px;
             margin-bottom: 25px;
             font-size: 16px;
+            @media (min-width: $breakpoint-tablet) {
+                width: 31%;
+            }
             &__number {
                 color: white;
                 background-color: $color-primary;
@@ -169,17 +198,41 @@ a {
         padding-top: 54px;
         margin-left: 20px;
         margin-bottom: 25px;
+        @media (min-width: $breakpoint-desktop) {
+            max-width: $breakpoint-desktop;
+            margin: auto;
+            margin-bottom: 25px;
+            padding-top: 30px;
+        }
     }
     &__section{
         padding-left: 15px;
         padding-right: 15px;
         padding-bottom: 50px;
+        @media (min-width: $breakpoint-tablet) {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
+        @media (min-width: $breakpoint-desktop) {
+            max-width: $breakpoint-desktop;
+            margin: auto;
+            padding-bottom: 0px;
+        }
         &__card {
             width: 100%;
             height: 251px;
             margin-bottom: 15px;
             box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
             border-radius: 15px;
+            @media (min-width: $breakpoint-tablet) {
+                width: 48%;
+            }
+            @media (min-width: $breakpoint-desktop) {
+                width: 45%;
+                margin-bottom: 50px;
+            }
             &__container {
                 height: 70%;
                 &__img {
@@ -241,11 +294,23 @@ a {
     padding-left: 25px;
     padding-top: 22px;
     padding-bottom: 15px;
+    @media (min-width: $breakpoint-desktop) {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: end;
+        padding: 0px;
+        padding-bottom: 30px;
+        padding-right: 60px;
+        height: 114px;
+    }
     &__logo {
         font-size: 18px;
         color: white;
         font-family: 'Shrikhand';
         margin-bottom: 18px;
+        @media (min-width: $breakpoint-desktop) {
+            margin: 0px;
+        }
     }
     &__ul{
         list-style: none;
@@ -253,8 +318,15 @@ a {
         padding: 0;
         display: flex;
         flex-direction: column;
+        @media (min-width: $breakpoint-desktop) {
+            flex-direction: row;
+        }
         &__li {
             margin-bottom: 7px;
+            @media (min-width: $breakpoint-desktop) {
+                margin: 0px;
+                margin-right: 30px;
+            }
             &__link {
                 display: flex;
                 flex-direction: row;
