--- a/style/sassstyleindex.css
+++ b/style/sassstyleindex.css
@@ -81,11 +81,13 @@ a:active {
 .description__title {
   margin-top: 40px;
   font-size: 24px;
+  font-weight: 700;
   width: 73%;
 }
 @media (min-width: 1050px) {
   .description__title {
     font-size: 40px;
+    font-weight: 700;
     margin-top: 30px;
   }
 }
@@ -283,7 +285,7 @@ a:active {
 .main__section__card__description__bis__new {
   position: relative;
   bottom: 175px;
-  left: 23px;
+  left: 10px;
   height: 29px;
   width: 80px;
   background-color: #99E2D0;
@@ -294,9 +296,6 @@ a:active {
   text-align: center;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
   border-radius: 2px;
-}
-.main__section__card__description__bis__heart:hover {
-  background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
 }
 
 /* Footer */
