--- a/style/sassstyleindex.scss
+++ b/style/sassstyleindex.scss
@@ -86,9 +86,11 @@ a {
     &__title {
         margin-top: 40px;
         font-size: 24px;
+        font-weight: 700;
         width: 73%;
         @media (min-width: $breakpoint-desktop) {
             font-size: 40px;
+            font-weight: 700;
             margin-top: 30px;
         }
     }
@@ -264,7 +266,7 @@ a {
                     &__new {
                         position: relative;
                         bottom: 175px;
-                        left: 23px;
+                        left: 10px;
                         height: 29px;
                         width: 80px;
                         background-color: $color-tertiary;
@@ -275,11 +277,6 @@ a {
                         text-align: center;
                         box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
                         border-radius: 2px;
-                    }
-                    &__heart {
-                        &:hover {
-                            background: linear-gradient(193.33deg, $color-primary -11.44%, $color-secondary 123.93%);
-                        }
                     }
                 }
             }
