--- a/style/sassstylemenu.css
+++ b/style/sassstylemenu.css
@@ -31,21 +31,9 @@ a:active {
 }
 
 /* Header */
-.nav__arrow {
-  font-size: 23px;
-  color: #353535;
-  position: absolute;
-  left: 23px;
-  top: 20px;
-}
-@media (min-width: 1050px) {
-  .nav__arrow {
-    top: 35px;
-  }
-}
 .nav__headlogo {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   height: 63px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
   text-align: center;
@@ -59,12 +47,27 @@ a:active {
     font-size: 35px;
   }
 }
+.nav__headlogo__arrow {
+  font-size: 23px;
+  color: #353535;
+  position: relative;
+  left: 25px;
+  top: 20px;
+}
+.nav__headlogo__arrow--hidden {
+  visibility: hidden;
+}
+@media (min-width: 1050px) {
+  .nav__headlogo__arrow {
+    top: 35px;
+  }
+}
 .nav__headlogo__text {
   margin-top: 14px;
 }
 @media (min-width: 1050px) {
   .nav__headlogo__text {
-    margin-top: 30px;
+    margin-top: 25px;
   }
 }
 
@@ -111,21 +114,14 @@ a:active {
 @media (min-width: 1050px) {
   .main__name {
     justify-content: center;
+    margin-right: 0px;
+    margin-left: 0px;
   }
 }
 .main__name__text {
   font-family: "Shrikhand";
   font-weight: 400;
   font-size: 28px;
-}
-.main__name__icone:hover {
-  background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
-}
-@media (min-width: 1050px) {
-  .main__name__icone {
-    margin-left: 25px;
-    font-size: 23px;
-  }
 }
 .main__section {
   padding-bottom: 28px;
